--- a/app/src/main/res/layout/activity_lista_peliculas.xml
+++ b/app/src/main/res/layout/activity_lista_peliculas.xml
@@ -35,7 +35,9 @@
         android:paddingHorizontal="20dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:paddingVertical="10dp"
         android:layout_marginHorizontal="10dp"
-        android:text="@string/agregar_otra_pel_cula"/>
+        android:text="@string/agregar_otra_pel_cula"
+        tools:ignore="VisualLintButtonSize" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
