--- a/app/src/main/res/layout/item_pelicula.xml
+++ b/app/src/main/res/layout/item_pelicula.xml
@@ -2,6 +2,7 @@
 <androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
@@ -34,7 +35,8 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toEndOf="@id/itemImgPel"
             app:layout_constraintEnd_toStartOf="@id/btnBorrar"
-            android:layout_marginEnd="8dp" />
+            android:layout_marginEnd="8dp"
+            tools:ignore="RtlSymmetry" />
 
         <TextView
             android:id="@+id/tvGenero"
@@ -44,7 +46,8 @@
             app:layout_constraintTop_toBottomOf="@id/tvTitulo"
             app:layout_constraintStart_toEndOf="@id/itemImgPel"
             app:layout_constraintEnd_toStartOf="@id/btnBorrar"
-            android:layout_marginEnd="8dp" />
+            android:layout_marginEnd="8dp"
+            tools:ignore="RtlSymmetry" />
 
         <TextView
             android:id="@+id/tvYear"
@@ -54,7 +57,8 @@
             app:layout_constraintTop_toBottomOf="@id/tvGenero"
             app:layout_constraintStart_toEndOf="@id/itemImgPel"
             app:layout_constraintEnd_toStartOf="@id/btnBorrar"
-            android:layout_marginEnd="8dp" />
+            android:layout_marginEnd="8dp"
+            tools:ignore="RtlSymmetry" />
 
         <TextView
             android:id="@+id/tvComentario"
@@ -64,7 +68,8 @@
             app:layout_constraintTop_toBottomOf="@id/tvYear"
             app:layout_constraintStart_toEndOf="@id/itemImgPel"
             app:layout_constraintEnd_toStartOf="@id/btnBorrar"
-            android:layout_marginEnd="8dp" />
+            android:layout_marginEnd="8dp"
+            tools:ignore="RtlSymmetry" />
 
         <Button
             android:id="@+id/btnBorrar"
