--- a/app/src/main/res/layout/activity_lista_peliculas.xml
+++ b/app/src/main/res/layout/activity_lista_peliculas.xml
@@ -21,8 +21,9 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvPeliculas"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@+id/textoTituloPeliculas"
+        app:layout_constraintBottom_toTopOf="@+id/btnCargarOtraPelicula"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
@@ -32,10 +33,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="match_parent"
-        android:paddingHorizontal="20dp"
         android:layout_height="wrap_content"
+        android:paddingHorizontal="20dp"
         android:layout_gravity="center"
-        android:paddingVertical="10dp"
+        android:paddingVertical="20dp"
+        android:textAllCaps="true"
+        android:textSize="20sp"
         android:layout_marginHorizontal="10dp"
         android:text="@string/agregar_otra_pel_cula"
         tools:ignore="VisualLintButtonSize" />
