--- a/app/src/main/res/layout/activity_lista_peliculas.xml
+++ b/app/src/main/res/layout/activity_lista_peliculas.xml
@@ -12,11 +12,25 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/lista_de_pel_culas"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="30dp"
+        android:paddingStart="10dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:textSize="19sp"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:ignore="RtlSymmetry" />
+
+    <TextView
+        android:id="@+id/tvSinPeliculas"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/no_tienes_pel_culas"
+        android:textSize="18sp"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@id/textoTituloPeliculas"
+        app:layout_constraintBottom_toTopOf="@id/btnCargarOtraPelicula"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvPeliculas"
